@@ -1,7 +1,7 @@
 (* setup.ml generated for the first time by OASIS v0.2.0~alpha1 *)
 
 (* OASIS_START *)
-(* DO NOT EDIT (digest: bedbacb0034b0446ef0ff160aca7d4d8) *)
+(* DO NOT EDIT (digest: 2356aabb72fd4601e8c4704b2e535ba5) *)
 (*
    Regenerated by OASIS v0.2.0
    Visit http://oasis.forge.ocamlcore.org for more information and
@@ -5125,7 +5125,7 @@ let setup_t =
           ocaml_version = None;
           findlib_version = None;
           name = "extunix";
-          version = "0.0.2";
+          version = "0.0.2+dev";
           license =
             OASISLicense.DEP5License
               {
@@ -5251,7 +5251,8 @@ let setup_t =
                            "resource.c";
                            "mman.c";
                            "time.c";
-                           "pts.c"
+                           "pts.c";
+                           "execinfo.c"
                         ];
                       bs_data_files = [];
                       bs_ccopt =
