@@ -1,6 +1,6 @@
 # OASIS_START
-# DO NOT EDIT (digest: d259bb085c28344df87adf70b52b070c)
-version = "0.0.2"
+# DO NOT EDIT (digest: 0960ec6dc4b9f749581ea892620e5595)
+version = "0.0.2+dev"
 description = "Extended functions for OCaml Unix module"
 requires = "unix"
 archive(byte) = "extunix.cma"
